# sage

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
api/: limiter.py  main.py  middleware.py  schemas.py
api/routes/: chat.py  conversations.py  documents.py
config/: settings.py
deploy/huggingface/: DEPLOY.md  README.md
deploy/huggingface/prebuilt/: README.md
docs/: llm-engineer-work-log.md
docs/reviews/: 2026-07-18-pre-deploy-review.md
docs/user-testing/: user-testing.md
eval/: dataset.py  run_eval.py  scoring.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.test.ts  chat.ts  conversations.ts  documents.ts  session.ts  types.ts
frontend/src/components/: AnswerTurn.tsx  CitationCard.tsx  CitationMarker.tsx  CompanyFilter.tsx  ConversationList.tsx  FilingsList.tsx  MainPanel.tsx  MetadataBar.tsx  QueryBar.tsx  RelatedQuestions.tsx  RightPanel.test.tsx  RightPanel.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/context/: CitationHighlightContext.tsx
frontend/src/hooks/: useChatSession.ts  useTheme.ts
frontend/src/lib/: renderAnswerText.test.tsx  renderAnswerText.tsx
sage/: cli.py  retry.py
sage/db/: conversations.py  database.py  models.py  query_log.py
sage/embed/: local_embedder.py
sage/generation/: answer_engine.py  cache.py  cost.py  gemini_client.py  prompts.py
sage/ingest/: chunker.py  metadata.py  pdf_loader.py  pipeline.py
sage/retrieval/: reranker.py  retriever.py  store.py
scripts/: deploy_hf_space.py
tests/: conftest.py  fakes.py  test_answer_engine.py  test_api.py  test_cache.py  test_chunker.py  test_cli.py  test_conversations.py  test_cost.py  test_database.py  test_eval_scoring.py  test_gemini_client.py  test_local_embedder.py  test_metadata.py  test_middleware.py  test_pdf_loader.py  test_pipeline.py  test_prompts.py  test_reranker.py  test_retriever.py  test_retry.py
